Fix type on data-collapse attribute

--- a/src/main/webapp/components/Table.less
+++ b/src/main/webapp/components/Table.less
@@ -140,25 +140,25 @@ table.c20 > * > tr > *:nth-child(20), table[data-c20] > * > tr > *:nth-child(20)
 
 @media only screen and (max-width: @phone)
 {
-	table[data-colapse="Phone"] { .card() }
+	table[data-collapse="Phone"] { .card() }
 }
 
 @media only screen and (max-width: @tablet)
 {
-	table[data-colapse="Tablet"] { .card() }
+	table[data-collapse="Tablet"] { .card() }
 }
 
 @media only screen and (max-width: @notebook)
 {
-	table[data-colapse="Notebook"] { .card() }
+	table[data-collapse="Notebook"] { .card() }
 }
 
 @media only screen and (max-width: @desktop)
 {
-	table[data-colapse="Desktop"] { .card() }
+	table[data-collapse="Desktop"] { .card() }
 }
 
 @media only screen and (max-width: @widescreen)
 {
-	table[data-colapse="Widescreen"] { .card() }
+	table[data-collapse="Widescreen"] { .card() }
 }
